# ai-game-automation

./: .flake8  .gitignore  1_record_data.py  2_train_model.py  3_run_inference.py  4_debug_model_output.py  LICENSE  MANIFEST.in  PROJECT_CLEANUP.md  README.md  REFACTOR_SUMMARY.md  RESOLUTION_GUIDE.md  config.py  install.bat  install.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  stop_training.py
data_human/: actions.npy
docs/: CONFIGURATION.md  CONTRIBUTING.md  TROUBLESHOOTING.md
examples/: README.md
examples/sample_recordings/: README.md
examples/trained_models/: README.md
scripts/: 0_setup.py  1_check_dependencies.py  2_verify_system_setup.py  3_record_data.py  4.5_choose_model_configuration.py  4_analyze_data_quality.py  5_train_model.py  6_run_inference.py  7_debug_model_output.py
